// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Policy Guidance Snapshot Tests renders correctly with policy guidance 1`] = `
<div>
  <div
    class="space-y-3"
  >
    <div
      class="flex items-center gap-2 mb-3"
    >
      <span
        data-testid="BarChart3"
      >
        BarChart3
         Icon
      </span>
      <h4
        class="font-semibold text-foreground/80"
      >
        Policy Context
      </h4>
    </div>
    <div
      class="space-y-2"
    >
      <div
        class="p-3 rounded-lg border bg-gray-800/50 border-gray-700 text-sm"
      >
        <div
          class="flex items-start gap-2"
        >
          <span
            data-testid="Info"
          >
            Info
             Icon
          </span>
          <div>
            <h5
              class="font-medium text-foreground"
            >
              Role Hierarchy
            </h5>
            <p
              class="text-foreground/70 mt-1 leading-relaxed"
            >
              Your role has higher authority than the remote user's role.
            </p>
          </div>
        </div>
      </div>
      <div
        class="p-3 rounded-lg border bg-gray-800/50 border-gray-700 text-sm"
      >
        <div
          class="flex items-start gap-2"
        >
          <span
            data-testid="Info"
          >
            Info
             Icon
          </span>
          <div>
            <h5
              class="font-medium text-foreground"
            >
              Critical Field Change
            </h5>
            <p
              class="text-foreground/70 mt-1 leading-relaxed"
            >
              Changes to 'status' affect task state fundamentally.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Policy Guidance Snapshot Tests renders correctly without policy guidance 1`] = `<div />`;

exports[`Policy Guidance Snapshot Tests renders null when no applicable explanations 1`] = `
<div>
  <div
    class="space-y-3"
  >
    <div
      class="flex items-center gap-2 mb-3"
    >
      <span
        data-testid="BarChart3"
      >
        BarChart3
         Icon
      </span>
      <h4
        class="font-semibold text-foreground/80"
      >
        Policy Context
      </h4>
    </div>
    <div
      class="space-y-2"
    />
  </div>
</div>
`;
